Remove importContent #11613 (#11621)